Wed Mar 24 04:12:44 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_mod_cvar_get): new method Module#class_variable_get.

	* object.c (rb_mod_cvar_set): ditto (Module#class_variable_set).

Tue Mar 23 17:45:22 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_atfork): 1.9 warns no more for thread
	  termination.  [ruby-dev:23212]

Tue Mar 23 14:46:10 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, */Makefile.sub, common.mk (clean-local, distclean-local):
	  separate files under directories due to directory separator.

	* */Makefile.sub (MKFILES): common.mk and */Makefile.sub should not be
	  removed.

	* win32/Makefile.sub, wince/Makefile.sub: $* cannot appear in explicit
	  rules.

	* cygwin/GNUmakefile.in: some mingw stuffs were missed.

	* lib/mkmf.rb (create_makefile): Borland make wrongly removes braces
	  from command lines.

	* bcc32/Makefile.sub: needs bcc32/mkexports.rb.

Mon Mar 22 08:21:17 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, */Makefile.sub, common.mk: extract common portions.

	* Makefile.in, cygwin/GNUmakefile.in, */Makefile.sub (RBCONFIG):
	  separated time stamp file for rbconfig.rb.

	* configure.in: append common.mk to Makefile.

	* mkconfig.rb: keep mtime of rbconfig.rb if unchanged.

	* win32/rm.bat: remove multiple files.

	* wince/mkconfig_wce.rb: use fake.rb instead.

Sun Mar 21 22:17:35 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httpserver.rb (WEBrick::HTTPServer#virtual_host):
	  sort @virtual_hosts in address, port, host order.

	* lib/webrick/httpserver.rb (WEBrick::HTTPServer#lookup_server):
	  hostname should not be match if :ServerAlias is not given.

Sun Mar 21 21:11:16 2004  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/shell/*: bug fix for Shell#system(command_line_string).

Sun Mar 21 21:04:42 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ruby.1: add -width option to .Bl for old groff.
